<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gankWhite">

    <include layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_common"
            android:paddingLeft="@dimen/padding_common"
            android:paddingRight="@dimen/padding_common">

            <TextView
                style="@style/TextAboutTip"
                android:text="@string/gank_about_app_tip" />

            <TextView
                android:id="@+id/tvAboutApp"
                style="@style/TextAboutDesc"
                android:text="@string/gank_about_app_desc" />


            <TextView
                style="@style/TextAboutTip"
                android:text="@string/gank_about_me_tip" />

            <TextView
                android:id="@+id/tvAboutMe"
                style="@style/TextAboutDesc"
                android:text="@string/gank_about_me_desc" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>