<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivLogo"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVersion"
        android:layout_marginTop="60dp"
        android:background="@color/gankWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCheck"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:text="@string/gank_check_update"
            android:textColor="@color/gankBlank"
            android:textSize="15sp" />

        <include layout="@layout/layout_divider" />

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:text="@string/gank_feedback"
            android:textColor="@color/gankBlank"
            android:textSize="15sp" />

        <include layout="@layout/layout_divider" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:text="@string/gank_about"
            android:textColor="@color/gankBlank"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>
